test/must_fail/bad_chain_function.ngjs
#!/usr/bin/env ngspicejs
// Bad method of ac
// linter: ngspicejs-lint
"use strict";

ac().fstart(16).fstop(20001).banana(20);
